--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Prothom Alo</title>
 </head>
 <body>
-    <img src="images/cover.png" alt="Logo">
+    <img height="90%" width="20%" src="images/cover.png" alt="Logo">
     <h4><u> <a href="https://www.prothomalo.com/sports/football" target="_blank">ফুটবল</a></u></h4>
     <h1>কেউ বলছেন 'অন্য গ্রহের গোল', কেউ 'ইতিহাস সেরা'</h1>
     <b>অনলাইন ডেস্ক</b> <br> <p>আপডেট: ৩১ মে ২০১৫, ১৪: ৪৯</p> <br>
